--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,13 +1,30 @@
-
-<% if @search.search_tech_assets.empty? %>
+<div class="container">
+	<% if @search.search_tech_assets.empty? %>
 	<p> No record</p>
-<% else %>
-
-	<% @search.search_tech_assets.each do |tech_asset| %>
-		<br/>
-		<h1><%= tech_asset.title %></h1>
-		<p><%= tech_asset.description %></p>
-		<p><%= tech_asset.location %></p>
-		<br/>
+	<% else %>
+		<div class="title-row">
+			<div class="title">
+				View Assets
+			</div>
+		</div>
+		<div class="asset-box">
+			<% @search.search_tech_assets.each do |tech_asset| %>
+				<%= link_to tech_asset do %>
+					<div class="asset-row">
+						<div class="picture">
+						</div>
+						<div class="info">
+							<div class="name"><%= tech_asset.title %></div>
+							<div class="text"><%= tech_asset.description %></div>
+						</div>
+						<div class="item ml-auto mh">Consulting</div>
+						<div class="item mh"><%= tech_asset.location %></div>
+						<div class="item mh">Insurance</div>
+						<div class="item mh">Guidewire</div>
+						<div class="item mh">In Development</div>
+					</div>			
+				<% end %>
+			<% end %>
+		</div>
 	<% end %>
-<% end %>
+</div>
