--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -134,6 +134,29 @@ button{
 	display: block;
 }
 
+.button {
+	width: 200px;
+	height: 60px;
+	background: $primary-color;
+	border: none;
+	color: white;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 14px;
+	display: block;
+}
+
+/** Link **/
+
+a {
+	color: inherit;	
+}
+
+a:hover, a:focus {
+	color: inherit;	
+	text-decoration: none;	
+}
+
 
 /** Grid **/
 
