--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -40,6 +40,17 @@
 			}
 	    }
 
+	    .search-form {
+	    	display: flex;
+	    	width: 100%;
+	    }
+
+	    .search-input {
+	    	border: none;
+	    	outline: white;
+	    	width: calc(100% - 200px);
+	    }
+
 
 	}
 
@@ -95,6 +106,7 @@
 		width: 100%;
 		border-bottom: 1px solid #ededed;
 		height: 70px;
+		padding-right: 20px;
 
 		.picture {
 			width: 60px;
@@ -119,8 +131,12 @@
 			margin-left: 40px;
 		}
 
-
+		&:hover {
+			background: #fafafa;
+		}
 	}
+
+
 
 
 
