--- a/app/assets/stylesheets/searches.scss
+++ b/app/assets/stylesheets/searches.scss
@@ -1,3 +1,55 @@
 // Place all the styles related to the searches controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+.container {
+	margin-top: 90px;
+}
+
+/** Asset Row **/
+
+.asset-box {
+	border-top: 1px solid #ededed;
+	display: inline-block;
+	margin-top: 50px;
+	width: 100%;
+	margin-bottom: 100px;
+}
+
+.asset-row {
+	align-items: center;
+	display: flex;
+	width: 100%;
+	border-bottom: 1px solid #ededed;
+	height: 70px;
+	padding-right: 20px;
+
+	.picture {
+		width: 60px;
+		height: 60px;
+		background: #ededed;
+	}
+
+	.info {
+		margin-left: 20px;
+		width: 200px;
+
+		.name {
+			font-weight: 600;
+			width: 100%;
+		}
+		.text {
+			width: 100%;
+		}
+	}
+
+	.item {
+		margin-left: 40px;
+	}
+
+	&:hover {
+		background: #fafafa;
+	}
+}
