--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"></a>
+          <%= link_to root_path do %>
+            <div class="navbar-brand"></div>
+          <% end %>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to root_path do %>Home<% end %></li>
+            <li><%= link_to new_search_path do %>Search Assets<% end %></li>
             <li><a>About</a></li>
             <li><a>Submit Asset</a></li>
           </ul>
@@ -41,5 +44,26 @@
 
   	
     <%= yield %>
+
+<div class="section section--border-top">
+    <div class="container">
+        <div class="social-box mb-40">
+            <div class="social-box__icon"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
+            <div class="social-box__icon"><i class="fa fa-twitter"></i></div>
+            <div class="social-box__icon"><i class="fa fa-facebook"></i></div>
+            <div class="social-box__icon"><i class="fa fa-instagram"></i></div>
+        </div>
+        <p class="mb-60">© 2017. See Terms of Use for more information. Deloitte refers to one or more of Deloitte Touche Tohmatsu Limited, a UK private company limited by guarantee (“DTTL”), its network of member firms, and their related entities. DTTL and each of its member firms are legally separate and independent entities. DTTL (also referred to as “Deloitte Global”) does not provide services to clients. Please see www.deloitte.com/about to learn more about our global network of member firms.
+        </p>
+        <div class="footer-link-box">
+            <h5>Privacy</h5>
+            <h5>Terms of Use</h5>
+            <h5>Cookies</h5>
+        </div>
+    </div>
+</div>
+
+
+
   </body>
 </html>
