--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,19 +1,21 @@
-<h1> Advanced Search </h1>
+<div class="container">
+	<h1> Advanced Search </h1>
 
-<%= form_for @search do |s| %>
+	<%= simple_form_for @search do |s| %>
 
-	<div class="field">
-		<%= s.label :keywords %><br/>
-		<%= s.text_field :keywords %>
-	</div>
+		<div class="field">
+			<%= s.label :keywords %><br/>
+			<%= s.text_field :keywords %>
+		</div>
 
-	<div class="field">
-		<%= s.label :location %><br/>
-		<%= s.select :location, options_for_select(@locations), include_blank: true %>
-	</div>
+		<div class="field">
+			<%= s.label :location %><br/>
+			<%= s.select :location, options_for_select(@locations), include_blank: true %>
+		</div>
 
-	<div class="actions"><%= s.submit "Search", class: "btn-primary" %></div>
+		<div class="actions"><%= s.submit "Search", class: "btn-primary" %></div>
 
-<% end %>
+	<% end %>
 
-<%= link_to "Back", root_path %>
+	<%= link_to "Back", root_path %>
+</div>
