--- a/app/views/tech_assets/index.html.erb
+++ b/app/views/tech_assets/index.html.erb
@@ -4,22 +4,18 @@
 			<div class="box">
 				<div class="title">Tech Assets Repository</div>
 				<div class="search-box">
-					<i class="fa fa-search"></i>
-					<div class="ml-auto">
-
-							<button>Search</button>
-					</div>
+					<%= form_tag tech_assets_path, class: "search-form", :method => 'get' do %>
+						<%= text_field_tag :search, params[:search], class: "search-input", placeholder: "Try 'InsurCloud'" %>
+						<%= submit_tag "Search", class: 'button' %>
+					<% end %>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<%= form_tag tech_assets_path, :method => 'get' do %>
-		<%= text_field_tag :search, params[:search] %>
-		<%= submit_tag "Search" %>
-	<% end %>
 
-	<%= link_to "Advanced Search", new_search_path %>
+
+
 
 	<div class="section">
 		<div class="container">
@@ -27,20 +23,14 @@
 				<div class="title">
 					View Assets
 				</div>
-				<div class="filter-row">
+				<!--<div class="filter-row">
 					<div class="filter">
 						All Service Lines
 						<i class="fa fa-angle-down"></i>
 					</div>
-
-					<div class="dropdown filter">
-					  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-					  <span class="caret"></span></button>
-					  <ul class="dropdown-menu">
-					    <li><a href="#">Canada</a></li>
-					    <li><a href="#">USA</a></li>
-					    <li><a href="#">India</a></li>
-					  </ul>
+					<div class="filter">
+						All Locations
+						<i class="fa fa-angle-down"></i>
 					</div>
 
 					<div class="filter">
@@ -51,14 +41,14 @@
 						All Maturities 
 						<i class="fa fa-angle-down"></i>
 					</div>
-				</div>
+				</div>-->
 			</div>
 
 			<div class="asset-box">
 
 				<% @tech_assets.each do |tech_asset| %>
 
-
+					<%= link_to tech_asset do %>
 					<div class="asset-row">
 						<div class="picture">
 						</div>
@@ -72,12 +62,12 @@
 						<div class="item mh">Guidewire</div>
 						<div class="item mh">In Development</div>
 					</div>			
-
+					<% end %>
 				<% end %>
 
 			</div>
 
-			<button class="align-center">View More</button>
+			<!--<button class="align-center">View More</button>-->
 		</div>
 	</div>
 </div>
