--- a/app/assets/stylesheets/searches.scss
+++ b/app/assets/stylesheets/searches.scss
@@ -8,6 +8,16 @@
 	margin-top: 90px;
 }
 
+.search-page {
+	margin-top: 160px;
+	margin-bottom: 160px;
+
+	h1 {
+		margin-bottom: 30px !important;
+	}
+
+}
+
 /** Asset Row **/
 
 .asset-box {
