--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@ $primary-color: #80e700;
 
 body{
     font-family: "Open Sans";
-    font-size: 16px;
+    font-size: 14px;
 	line-height: 1.75;
 }
 
@@ -40,7 +40,7 @@ body{
 /** Containers **/
 
 .container{
-	width: 1300px;
+	width: 1100px;
 	margin: 0 auto;
 }
 
@@ -64,6 +64,14 @@ body{
 
 .mv {
 	display: none;
+}
+
+/** Form **/
+
+.form-control {
+	height: 50px;
+	width: 60%;
+	border-radius: 0px;
 }
 
 
