--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -134,6 +134,24 @@
 		&:hover {
 			background: #fafafa;
 		}
+
+		.service_line {
+			width: 150px;
+		}
+
+		.location {
+			width: 80px;
+		}
+
+		.industry {
+			width: 140px;
+		}
+		.technology {
+			width: 90px;
+		}
+		.maturity {
+			width: 140px;
+		}
 	}
 
 
