--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,7 @@ body{
     font-family: "Open Sans";
     font-size: 14px;
 	line-height: 1.75;
+	overflow-y: scroll;
 }
 
 .text-center{
@@ -40,7 +41,7 @@ body{
 /** Containers **/
 
 .container{
-	width: 1100px;
+	width: 1200px;
 	margin: 0 auto;
 }
 
@@ -72,6 +73,10 @@ body{
 	height: 50px;
 	width: 60%;
 	border-radius: 0px;
+}
+
+.form-control-tall {
+	height: 150px !important;
 }
 
 
