--- a/app/views/tech_assets/new.html.erb
+++ b/app/views/tech_assets/new.html.erb
@@ -1,5 +1,8 @@
-<h1> New Form </h1>
+<div class="search-page">
+
+<div class="container">
+<h1> Submit Asset </h1>
 
 <%= render 'form' %>
-
-<%= link_to "Back", root_path %> 
+</div>
+</div>
