--- a/app/views/tech_assets/index.html.erb
+++ b/app/views/tech_assets/index.html.erb
@@ -57,7 +57,7 @@
 						</div>
 						<div class="info">
 							<div class="name"><%= tech_asset.title %></div>
-							<div class="text"><%= tech_asset.description %></div>
+							<div class="text"><%= tech_asset.short_description %></div>
 						</div>
 						<div class="item ml-auto mh service_line"><%= tech_asset.service_line %></div>
 						<div class="item mh location"><%= tech_asset.location %></div>
