--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -16,11 +16,11 @@
 							<div class="name"><%= tech_asset.title %></div>
 							<div class="text"><%= tech_asset.short_description %></div>
 						</div>
-						<div class="item ml-auto mh"><%= tech_asset.service_line %></div>
-						<div class="item mh"><%= tech_asset.location %></div>
-						<div class="item mh"><%= tech_asset.industry %></div>
-						<div class="item mh"><%= tech_asset.technology %></div>
-						<div class="item mh"><%= tech_asset.maturity %></div>
+						<div class="item ml-auto mh service_line"><%= tech_asset.service_line %></div>
+						<div class="item mh location"><%= tech_asset.location %></div>
+						<div class="item mh industry"><%= tech_asset.industry %></div>
+						<div class="item mh technology"><%= tech_asset.technology %></div>
+						<div class="item mh maturity"><%= tech_asset.maturity %></div>
 					</div>			
 				<% end %>
 			<% end %>
