--- a/app/views/tech_assets/index.html.erb
+++ b/app/views/tech_assets/index.html.erb
@@ -23,7 +23,7 @@
 				<div class="title">
 					View Assets
 				</div>
-				<!--<div class="filter-row">
+				<div class="filter-row">
 					<div class="filter">
 						All Service Lines
 						<i class="fa fa-angle-down"></i>
@@ -41,7 +41,7 @@
 						All Maturities 
 						<i class="fa fa-angle-down"></i>
 					</div>
-				</div>-->
+				</div>
 			</div>
 
 			<div class="asset-box">
